# axel

./: CMakeLists.txt  app.cpp
data/: advantages.yml  cultures.yml  disadvantages.yml  races.yml  skills.yml
gui/: mainwidget.cpp  mainwidget.hpp
tde/: CMakeLists.txt  advantage.cpp  advantage.hpp  attributes.cpp  attributes.hpp  character.cpp  character.hpp  culture.cpp  culture.hpp  data.hpp  disadvantage.cpp  disadvantage.hpp  race.cpp  race.hpp  skill.cpp  skill.hpp  utils.cpp  utils.hpp
